--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.7.1",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.15.2",
+    "@types/nodemailer": "^6.4.4",
     "bcryptjs": "^2.4.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
