--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.15.2",
     "@types/nodemailer": "^6.4.4",
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
