--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.15.2",
-    "@types/nodemailer": "^6.4.4",
     "@sendgrid/mail": "^7.7.0",
+    "@types/nodemailer": "^6.4.4",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
