--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.15.2",
     "@sendgrid/mail": "^7.7.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/nodemailer": "^6.4.4",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
@@ -43,7 +44,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@types/bcryptjs": "^2.4.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^16.0.0",
